--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
+<head> 
+<link rel="stylesheet" href="styles.css">
+</head>
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <main id="main">
+<!-- PAGE STARTS HERE -->
+<main id="main">
       <h1 id="title">Dr. Norman Borlaug</h1>
       <p>The man who saved a billion lives</p>
-      <figure id="img-div">
+
+<!-- IMAGE DIV -->
+      <div id="img-div">
         <img
           id="image"
           src="images/tribute-page-main-image.jpg"
           alt="Dr. Norman Borlaug seen standing in Mexican wheat field with a group of biologists"
         />
+
+<!-- TEXT BELOW IMAGE -->
         <figcaption id="img-caption">
           Dr. Norman Borlaug, third from the left, trains biologists in Mexico
           on how to increase wheat yields - part of his life-long war on hunger.
         </figcaption>
-      </figure>
-      <section id="tribute-info">
+      </div>
+
+<!-- MAIN TEXT ON PAGE -->
+      <div id="tribute-info">
         <h3 id="headline">Here's a time line of Dr. Borlaug's life:</h3>
         <ul>
           <li><strong>1914</strong> - Born in Cresco, Iowa</li>
@@ -95,7 +99,7 @@
           <li><strong>2009</strong> - dies at the age of 95.</li>
         </ul>
         <blockquote
-          cite="http://news.rediff.com/report/2009/sep/14/pm-pays-tribute-to-father-of-green-revolution-borlaug.htm"
+          cite="#"
         >
           <p>
             "Borlaug's life and achievement are testimony to the far-reaching
@@ -114,7 +118,5 @@
             >Wikipedia entry</a
           >.
         </h3>
-      </section>
+      </div>
     </main>
-  </body>
-</html>
